--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -62,7 +62,7 @@
         android:id="@+id/editText"
         android:layout_width="304dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="@string/guessWord"
         android:inputType="textPersonName"
@@ -70,14 +70,14 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ordGættet" />
+        app:layout_constraintTop_toBottomOf="@+id/GuessButton" />
 
     <Button
         android:id="@+id/GuessButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="100dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="100dp"
         android:background="@drawable/bg_main_button"
         android:elevation="2dp"
@@ -86,6 +86,6 @@
         android:text="@string/guessButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/editText" />
+        app:layout_constraintTop_toBottomOf="@+id/ordGættet" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
