--- a/app/src/main/res/layout/activity_highscore.xml
+++ b/app/src/main/res/layout/activity_highscore.xml
@@ -37,7 +37,7 @@
         android:layout_height="match_parent"
         android:layout_marginStart="36dp"
         android:layout_marginTop="130dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="100dp"
         android:layout_marginEnd="36dp"
         android:divider="@null"
         android:background="@drawable/listview_background"
@@ -46,5 +46,21 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_main_button"
+        android:layout_marginBottom="25dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
+        android:text="@string/reset_button"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:elevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
