--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,11 +23,11 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/forkert6"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="400dp"
-        android:layout_marginEnd="100dp"
+        android:background="@drawable/ic_launcher"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="350dp"
+        android:layout_marginEnd="50dp"
         android:contentDescription="@string/imageViewMain"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:background="@drawable/bg_main_button"
         android:elevation="2dp"
+        android:layout_marginTop="20dp"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
         android:text="@string/gameButton"
@@ -47,7 +48,6 @@
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imageView"
-        app:layout_constraintBottom_toTopOf="@id/highscore"
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
